# llm-katan

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  test_cluster_all.py
.github/workflows/: ci.yml  opinai.yml
llm_katan/: __init__.py  cli.py  config.py  conversations.py  dashboard.html  events.py  model.py  server.py  stats.py
llm_katan/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  bedrock.py  openai.py  vertexai.py
scripts/: aws-deploy.sh
tests/: test_anthropic.py  test_azure_openai.py  test_azure_v1.py  test_bedrock.py  test_conversations.py  test_echo.py  test_failure_simulation.py  test_key_validation.py  test_multimodal.py  test_production.py  test_server.py  test_stats.py  test_tool_calling.py  test_vertex_openai_compat.py  test_vertexai.py
